--- a/core/templates/badge.html
+++ b/core/templates/badge.html
@@ -112,94 +112,6 @@
 
 
 
-<style type="text/css">
-
-div#overlay-div-content2-twitter {
-    display: none;
-}
-
-div#overlay-div-content2-facebook {
-    display: none;
-}
-
-div#overlay-div-content3 {
-    display: none;
-}
-
-
-
-
-div#badge-title {
-    font-size: 40px;
-    color: #0E2F36;
-    margin: 10px;
-    text-align: left;
-}
-
-div#badge-subtitle {
-    font-size: 20px;
-    color: #5CA3B2;
-    color: #0E2F36;
-    margin: 10px 20px 40px 0px;
-    text-align: right;
-}
-
-div#badge-action {
-    font-size: 24px;
-    color: red;
-}
-
-div#badge-footer {
-   width: 100%;
-   height: 50px;
-   background-color: white;
-   position: absolute;
-   bottom: 0px;
-   -webkit-border-radius: 0px 0px 10px 10px;
-}
-
-div#facebook-login-share {
-    float: left;
-    margin: 5px 0px 0px 80px;
-    cursor: pointer; 
-}
-
-div#twitter-login-share {
-    float: right;
-    margin: 5px 80px 0px 0px;
-    cursor: pointer;
-}
-
-div#ripple-badge {
-        position: relative;
-        
-	box-shadow: 0 0 10px #000000;
-	
-        -moz-border-radius: 20px;
-        -moz-box-shadow: 0 0 10px #000000;
-
-	-webkit-border-radius: 10px 10px 10px 10px;
-	-webkit-box-shadow: 3px 3px 10px #000000;
-	
-	
-	text-align: center;
-	font-size: 16px;
-	font-weight: bold;
-
-        #background-color: #EFFBFB;
-	background-color: #F2F2F2;
-	float: left;
-	width: 469px;
-	height: 220px;
-
-	font-size: 20px;
-	color: red;
-}
-
-.overlay-top p {
-    margin: 0px;
-}
-</style>
 
 
 <script>
@@ -209,7 +121,7 @@ var shareLink = '';
 var overlayType = 'twitter';
 
 function badge_facebook_login_click() {
-  var requiredPerms  = ['email','user_about_me','user_birthday','user_website', 'publish_stream'];
+  var requiredPerms  = ['publish_stream'];
   FB.login(function(response) {
     if (response.session) {
       var a = response.session;
@@ -246,12 +158,22 @@ function badge_facebook_login_click() {
       );
 }
 
-FB.init({appId: '{{fbappid}}', status: true, cookie: true, xfbml: true});
+FB.init({appId: '{{facebook_app_id}}', status: true, cookie: true, xfbml: true});
 
 
 $('#facebook-login').click(function(){
-        badge_facebook_login_click();
+       signinWin = window.open("https://graph.facebook.com/oauth/authorize?client_id={{facebook_api}}&redirect_uri={{redirect_uri}}&display=popup&scope={{scope}}", "SignIn", "width=780,height=410");
+       setTimeout(CheckLoginStatus, 2000);
+       signinWin.focus();
+       return false;
 });
+function CheckLoginStatus() {
+    if (signinWin.closed) {
+        alert("I have logged in");
+        #window.location.href = "{% url facebook_login_test %}"
+   }
+    else setTimeout(CheckLoginStatus, 1000);
+}
 
 //default usage
 $("#overlay-textarea-twitter").charCount();
@@ -266,35 +188,20 @@ $("#overlay-textarea-facebook").charCount();
 });
 
 
-$('#flogout').click(function() 
-{
-	var options  = { path: '/', expires: -1 };
-	$.cookie("uid", null, options);
-	$.cookie("session_key", null, options);
-	$.cookie("secret", null, options);
-	$.cookie("expires", null, options);
-	$.cookie("base_domain", null, options);
-	$.cookie("access_token", null, options);
-	$.cookie("sig", null, options);
 
-	FB.getLoginStatus(function(response) {
-		if (response.session) {	
-			FB.logout(function(response) { 
-                             $.ajax({url: "{% url facebook_logout_callback %}",
-                                     success: function(data){
-                                               $("#flogout").hide();
-                                              }
-                                   });
-				});
-		}
-		else {
-                             $.ajax({url: "{% url facebook_logout_callback %}",
-                                    success: function(data){
-                                               $("#flogout").hide();
-                                            }
-                                    });
-		}
-	});
+$('#flogout').click(function(){
+        $.ajax({ 
+                   url: "{% url ajax_facebook_logout %}", 
+	           dataType: "json", 
+	           data: {},
+	           success: function (data) { 
+                       $("#flogout").hide();
+                   },
+	           beforeSend: function() {
+                       FB.logout();
+                 } 
+
+        }); 
 });
 
 function activateCopy() {
@@ -442,3 +349,92 @@ $('#twitter-share').click(function(){
 
 
 </script>
+
+<style type="text/css">
+
+div#overlay-div-content2-twitter {
+    display: none;
+}
+
+div#overlay-div-content2-facebook {
+    display: none;
+}
+
+div#overlay-div-content3 {
+    display: none;
+}
+
+
+
+
+div#badge-title {
+    font-size: 40px;
+    color: #0E2F36;
+    margin: 10px;
+    text-align: left;
+}
+
+div#badge-subtitle {
+    font-size: 20px;
+    color: #5CA3B2;
+    color: #0E2F36;
+    margin: 10px 20px 40px 0px;
+    text-align: right;
+}
+
+div#badge-action {
+    font-size: 24px;
+    color: red;
+}
+
+div#badge-footer {
+   width: 100%;
+   height: 50px;
+   background-color: white;
+   position: absolute;
+   bottom: 0px;
+   -webkit-border-radius: 0px 0px 10px 10px;
+}
+
+div#facebook-login-share {
+    float: left;
+    margin: 5px 0px 0px 80px;
+    cursor: pointer; 
+}
+
+div#twitter-login-share {
+    float: right;
+    margin: 5px 80px 0px 0px;
+    cursor: pointer;
+}
+
+div#ripple-badge {
+        position: relative;
+        
+	box-shadow: 0 0 10px #000000;
+	
+        -moz-border-radius: 20px;
+        -moz-box-shadow: 0 0 10px #000000;
+
+	-webkit-border-radius: 10px 10px 10px 10px;
+	-webkit-box-shadow: 3px 3px 10px #000000;
+	
+	
+	text-align: center;
+	font-size: 16px;
+	font-weight: bold;
+
+        #background-color: #EFFBFB;
+	background-color: #F2F2F2;
+	float: left;
+	width: 469px;
+	height: 220px;
+
+	font-size: 20px;
+	color: red;
+}
+
+.overlay-top p {
+    margin: 0px;
+}
+</style>
