--- a/core/templates/test3.html
+++ b/core/templates/test3.html
@@ -5,6 +5,7 @@
 </head> 
 <body>  
 <div id="ripple-embed"></div>
+<!--<script type="text/javascript" src="http://www.ripplefunction.com/site_media/javascript/embed.js" ></script> -->
 <script type="text/javascript" src="{% url static 'javascript/embed.js' %}" ></script> 
 </body> 
 </html>
