--- a/static/css/cross-site-badge.css
+++ b/static/css/cross-site-badge.css
@@ -14,10 +14,13 @@ div#overlay-div-content3 {
 
 
 div#badge-title {
-    font-size: 40px;
-    color: #0E2F36;
-    margin: 10px;
     text-align: left;
+    color: #0E2F36;
+    font-size: 40px;
+    margin: 10px;
+}
+div#ripple-badge p {
+    margin: 0px;
 }
 
 div#badge-subtitle {
@@ -64,13 +67,12 @@ div#ripple-badge {
 
 	-webkit-border-radius: 10px 10px 10px 10px;
 	-webkit-box-shadow: 3px 3px 10px #000000;
-	
-	
+		
 	text-align: center;
 	font-size: 16px;
 	font-weight: bold;
 
-        #background-color: #EFFBFB;
+
 	background-color: #F2F2F2;
 	width: 469px;
 	height: 220px;
