Fixing path to bg_image fior link in slider.

--- a/frontpage/templates/frontpageCycle.html
+++ b/frontpage/templates/frontpageCycle.html
@@ -42,7 +42,7 @@ div#front-view {height: 300px;width: 900px; padding: 18px 20px; background: #ddd
 div#front-view a {margin: auto;}
 div#front-view img {height: 250px; width: 750px; margin: 20px 20px 20px 20px;}
 div.slidenav {position: absolute;right: 100px;top: 228px;z-index: 20;}
-    div.slidenav a:link, div.slidenav a:visited, div.slidenav a:active {display:inline; float:left; margin:0 8px 0 0; height:22px; width:22px; text-align:center; line-height:22px; font-size:10px; color:#999; background-image:url(../images/bg_numbers-new.png);}
+    div.slidenav a:link, div.slidenav a:visited, div.slidenav a:active {display:inline; float:left; margin:0 8px 0 0; height:22px; width:22px; text-align:center; line-height:22px; font-size:10px; color:#999; background-image:url(/site_media/images/bg_numbers-new.png);}
     div.slidenav a:hover {color:#666;} 
     div.slidenav a.activeSlide {font-weight:bold; color:#333;}
 
