Work on the widget.

--- a/core/templates/badge.html
+++ b/core/templates/badge.html
@@ -8,16 +8,23 @@
 
 	    <div id="facebook-login-share">
 		  <div id="fb-root"></div>
-                  <script src="http://connect.facebook.net/en_US/all.js"></script>
            
-                    <div id="div-facebook-logged-in" style="display:none; cursor:default;">
+                    {% if fbuser %}
+                    <div id="div-facebook-logged-in" class="hiding"
+                    {% else  %}
+                    <div id="div-facebook-logged-in" class="hiding">
+                    {% endif %}
 		      <button id="facebook-share" class="badge-button" style="cursor: pointer;">
 		           <img src="{{host}}{% url static 'images/facebookShare_icon2.png' %}"/><span>Share</span>
 		      </button>
                       <a id="flogout" style="cursor: pointer; color: gray; font-size: 12px;">logout</a>
                     </div>
 
-                    <div id="div-facebook-logged-out" style="display=none;cursor:default;">
+                    {% if fbuser %}
+                    <div id="div-facebook-logged-out" class="hiding">
+                    {% else %}
+                    <div id="div-facebook-logged-out" class="showing">
+                    {% endif %}
 		      <button id="facebook-login" class="badge-button" style="cursor: pointer;">
 		           <img src="{{host}}{% url static 'images/facebookShare_icon2.png' %}"/><span>Share</span>
 		      </button>
@@ -26,32 +33,35 @@
 	     </div>  
 
 	     <div id="twitter-login-share">
-                  <div id="div-twitter-logged-in" style="display:none;cursor:default;">
+
+
+                         {% if user %}
+                   <div id="div-twitter-logged-in" class="showing">
+		        {% else %}
+                   <div id="div-twitter-logged-in" class="hiding">
+		        {% endif %}
+
 		     <button id="twitter-share" class="badge-button" style="cursor: pointer;">
 		           <img src="{{host}}{% url static 'images/twitterShare_icon2.png' %}"/><span>Share</span>
 		     </button>
                       <a id="tlogout" style="cursor: pointer; color: gray; font-size: 12px;">logout</a>
 		  </div>
-		  <div id="div-twitter-logged-out" style="display=none;cursor:default;">
+                  	{% if user %}
+		  <div id="div-twitter-logged-out" class="hiding">
+		        {% else %}
+		  <div id="div-twitter-logged-out" class="showing">
+		        {% endif %}
                      <button id="twitter-login" class="badge-button"  style="cursor: pointer;">
 		         <img src="{{host}}{% url static 'images/twitterShare_icon2.png' %}" /><span>Share</span>
 		     </button>
 		     <span style="color: gray; font-size: 12px;">logged out</span>
 		  </div>
+
              </div>
 	 </div><!-- badge footer-->
 	</div> <!-- badge -->
-	{% if user %}
-<script>
-    $("#div-twitter-logged-in").show();
-    $("#div-twitter-logged-out").hide();
-</script>
-	{% else %}
-<script>
-    $("#div-twitter-logged-out").show();
-    $("#div-twitter-logged-in").hide();
-</script>
-       {% endif %}
+
+
 	<div id="overlay-blogger-login" class="overlay-blogger">
 
 	    <div id="overlay-div-content2-facebook" >
@@ -126,278 +136,51 @@
          </div><!-- end overlay-blogger -->
 
 
-
-
-
 <script>
 // Global vars
-var contentView = 0;
-var shareLink = '';
-var overlayType = 'twitter';
+var facebook_app_id = '{{facebook_app_id}}';
+var host = '{{host}}';
+var campaign_type = '{{campaign.campaign_type}}';
 
-FB.init({appId: '{{facebook_app_id}}', status: true, cookie: true, xfbml: true});
+{% if user %}
+var user = true;
+{% else %}
+var user = false;
+{% endif %}
 
-FB.getLoginStatus(function(response) {
-  if (response.session) {
-    // logged in and connected user, someone you know
-    $("#div-facebook-logged-in").show();
-    $("#div-facebook-logged-out").hide();
+{% if fbuser %}
+var fbuser = true;
+{% else %}
+var fbuser = false;
+{% endif %}
 
-    // if the user is logged in but has no fbuser, get it with ajax
-    $.ajax({ 
-                   url: "{{host}}{% url ajax_facebook_sync_server %}", 
-    	           dataType: "json", 
-    	           data: {uid : response.session.uid,
-                          access_token : response.session.access_token},
-    	           success: function (data){ 
-                   },
-    	           beforeSend: function() {
-                 } 
-    
-        });
+{% if overlayTwitter %}
+var overlayTwitter = true;
+{% else %}
+var overlayTwitter = false;
+{% endif %}
 
-  } else {
-    // no user session available, someone you dont know
-    $("#div-facebook-logged-out").show();
-    $("#div-facebook-logged-in").hide();
-  }
-});
+{% if overlayfacebook %}
+var overlayFacebook = true;
+{% else %}
+var overlayFacebook = false;
+{% endif %}
 
-/////////// twitter login ////////////////
-$('#twitter-login').click(function(){
-       signinWin = window.open("{{host}}{% url tauth_login %}", "SignIn", "width=780,height=410");
-       setTimeout(CheckLoginStatusTwitter, 2000);
-       signinWin.focus();
-       return false;
-});
-function CheckLoginStatusTwitter() {
-    if (signinWin.closed) {
-            $("#div-twitter-logged-in").show();
-            $("#div-twitter-logged-out").hide();
-            shareLink = 'twitter';
-            overlayType = "twitter";
-            $("#overlay-blogger-login").overlay().load();
-   }
-    else setTimeout(CheckLoginStatusTwitter, 1000);
-}
+var shash = '{{shash}}';
 
-///////////// facebook login //////////////
-$('#facebook-login').click(function(){
-       signinWin = window.open("https://graph.facebook.com/oauth/authorize?client_id={{facebook_api}}&redirect_uri={{redirect_uri}}&display=popup&scope={{scope}}", "SignIn", "width=780,height=410");
-       setTimeout(CheckLoginStatusFacebook, 2000);
-       signinWin.focus();
-       return false;
-});
-function CheckLoginStatusFacebook() {
-    if (signinWin.closed) {
-            $("#div-facebook-logged-in").show();
-            $("#div-facebook-logged-out").hide();
-            shareLink = 'facebook';
-            overlayType = "facebook";
-            $("#overlay-blogger-login").overlay().load();
-   }
-    else setTimeout(CheckLoginStatusFacebook, 1000);
-}
+var tauth_login_url = host + "{% url tauth_login %}" ;
+var facebook_sync_server_url = host + "{% url ajax_facebook_sync_server %}";
+var ajax_facebook_logout_url = host + "{% url ajax_facebook_logout %}";
+var tauth_logout_url = host + "{% url tauth_logout %}";
+var clipboard_url = host + "{% url static 'javascript/ZeroClipboard.swf' %}";
+var facebook_update_id_url = host + '{% url campaign_facebook_update campaign_id=campaign.id %}';
+var campaign_tweet_invite_url = host + "{% url campaign_tweet_invite campaign_id=campaign.id %}"
+var campaign_going_twitter_url = host + '{% url campaign_going_twitter campaign_id=campaign.id %}';
 
-//default usage
-$("#overlay-textarea-twitter").charCount();
-({
-	allowed: 80,		
-	warning: 20
-});
-$("#overlay-textarea-facebook").charCount();
-({
-	allowed: 80,		
-	warning: 20
-});
+var facebook_api = '{{facebook_api}}';
+var redirect_uri = '{{redirect_uri}}';
 
+var scope = '{{scope}}';
 
-
-$('#flogout').click(function(){
-        $.ajax({ 
-                   url: "{{host}}{% url ajax_facebook_logout %}", 
-	           dataType: "json", 
-	           data: {},
-	           success: function (data) { 
-                       $("#div-facebook-logged-out").show();
-                       $("#div-facebook-logged-in").hide();
-                   },
-	           beforeSend: function() {
-       
-                       var options  = { path: '/', expires: -1 };
-	               $.cookie("uid", null, options);
-	               $.cookie("session_key", null, options);
-	               $.cookie("secret", null, options);
-	               $.cookie("expires", null, options);
-	               $.cookie("base_domain", null, options);
-	               $.cookie("access_token", null, options);
-	               $.cookie("sig", null, options);
-                       FB.logout();
-
-                 } 
-
-        }); 
-});
-
-$('#tlogout').click(function(){
-        $.ajax({ 
-                   url: "{{host}}{% url tauth_logout %}", 
-	           dataType: "json", 
-	           data: {},
-	           success: function (data) { 
-                       
-                   },
-	           beforeSend: function() {
-       $("#div-twitter-logged-out").show();
-                       $("#div-twitter-logged-in").hide();
-                 } 
-
-        }); 
-});
-
-
-function activateCopy() {
-    ZeroClipboard.setMoviePath( "{{host}}{% url static 'javascript/ZeroClipboard.swf' %}" ); 
-    var clip = new ZeroClipboard.Client();
-    clip.setText( '{{campaign.code}}' );
-    clip.glue( 'd_clip_button', 'd_clip_container' );
-}
-
-$("#facebook-feed-update").click(function(){
-	// Show discount page
-	pageOverlay(3, '');
-	//activateCopy();
-	$.ajax({
-		url: '{{host}}{% url campaign_facebook_update campaign_id=campaign.id %}', 
-		dataType: "json",
-		data: {message: $("#overlay-textarea-facebook").val(), 
-                       shash: "{{shash}}" },
-
-		success: function(data){
-                  refreshAttendee(15);
-		},
-		beforeSend: function() {
-                {%ifequal campaign.campaign_type "discount" %} 
-                $("#code").showLoading({'afterShow': function(){ setTimeout( "jQuery('#code').hideLoading()", 3000 );}});         
-                {% endifequal %}
-		}
-	});   
-
-});
-$("#twitter-feed-update").click(function() { 
-        // Show discount page
-        pageOverlay(3, '');
-	//activateCopy();
-
-	$.ajax({ 
-                   url: "{{host}}{% url campaign_tweet_invite campaign_id=campaign.id %}", 
-	           dataType: "json", 
-	           data: {message: $("#overlay-textarea-twitter").val(), 
-		   shash: "{{shash}}"},
-	           success: function (data) {
-                                          $.get('{{host}}{% url campaign_going_twitter campaign_id=campaign.id %}', 
-	                                  function(data) { refreshAttendee(15); }); },
-	           beforeSend: function() { 
-                {%ifequal campaign.campaign_type "discount" %} 
-                         $("#code").showLoading({'afterShow': function(){ setTimeout( "jQuery('#code').hideLoading()", 3000 );}});         
-                {% endifequal %}
-                 } 
-
-    }); 
-});
-$("#overlay-blogger-login").overlay({
-	expose: {
-		loadSpeed: 100,
-		color: '#666',
-		opacity: 0.8
-	},
-	onLoad: function(event) {
-                // Which page to start on?
-		// if twitter user logged in, show twitter page
-		{% if user and overlayTwitter %}
-		    pageOverlay(2, 'twitter');
-		{% else %} 	
-	
-		    // if fbuser logged in
-		    {% if fbuser and overlayFacebook %}
-		        pageOverlay(2, 'facebook');
-		    {% else %} 
-	
-		        // show first view with facebook and twitter login buttons
-		        {% if not user and not fbuser %}
-		            pageOverlay(1, '');
-		        {% else %} 	
-		        
-		            // if fbuser logged in
-		            {% if fbuser %}
-		                pageOverlay(2, 'facebook');
-		            {% else %} 	
-		            
-		                // if fbuser logged in
-		                {% if user  %}
-		                pageOverlay(2, 'twitter');
-		                {% endif %}
-		            {% endif %}
-		        {% endif %}
-		    {% endif %}
-		{% endif %}
-            
-		if (shareLink == 'facebook') {
-		    pageOverlay(2, 'facebook');
-		    shareLink = '';
-		}
-		if (shareLink == 'twitter') {
-		    pageOverlay(2, 'twitter');
-		    shareLink = '';
-		}
-
-	},
-	top: 170,
-	left: 220
-});
-function pageOverlay(page, type){
-    type = overlayType;
-    switch(page) 
-    {
-    case 1:
-	contentView = 1;
-        $('#overlay-div-content2-facebook').hide();
-        $('#overlay-div-content2-twitter').hide();
-        $('#overlay-div-content3').show();
-	break;
-    case 2:
-        contentView = 2;
-	if (type == 'facebook') {
-	    $('#overlay-div-content2-facebook').show();
-	    $('#overlay-div-content2-twitter').hide();
-	    $('#overlay-div-content3').hide();
-	} else {
-	    $('#overlay-div-content2-facebook').hide();
-	    $('#overlay-div-content2-twitter').show();
-	    $('#overlay-div-content3').hide();
-	}
-	break;
-    case 3:
-        contentView = 3;
-        $('#overlay-div-content2-facebook').hide();
-        $('#overlay-div-content2-twitter').hide();
-        $('#overlay-div-content3').show();
-	break;
-    default:
-        break;
-    }
-}
-$('#facebook-share').click(function(){
-    shareLink = 'facebook';
-    overlayType = "facebook";
-    $("#overlay-blogger-login").overlay().load();
-});
-
-$('#twitter-share').click(function(){
-    overlayType = "twitter";
-    shareLink = 'twitter';
-    $("#overlay-blogger-login").overlay().load();
-});
-
-
+var code = '{{campaign.code}}';
 </script>
